# Wine-Quality-MLOps-Pipeline

./: .gitignore  README.md  demo.py  main.py  mlflow.db  pyproject.toml  run.txt  run_exp.sh  run_tests.sh  streamlit_ui.py  ui.py
api/: app.py  constants.py  schemas.py
api/router/: router.py
api/schemas/: __init__.py  pred_schemas.py
config/: config.yaml
config/dataset/: red_wine_quality.yaml
config/environment/: dev.yaml
config/envm/: dev.yaml
config/model/: random_forest_classifier.yaml
config/ui/: streamlit.yaml
configs/: config.yaml
configs/dataset/: wine_quality.yaml
configs/envm/: dev.yaml
configs/model/: random_forest_classifier.yaml
logs/2026-03-08/17-10-42/.hydra/: config.yaml  hydra.yaml
logs/2026-03-08/17-19-03/.hydra/: config.yaml  hydra.yaml
logs/2026-03-09/22-19-39/.hydra/: config.yaml  hydra.yaml
logs/2026-03-09/22-20-41/.hydra/: hydra.yaml
logs/2026-03-09/23-25-27/.hydra/: hydra.yaml
mlartifacts/1/models/m-183ced6b55c74fa2a55e84cf3ee15ba2/artifacts/: MLmodel
notebook/: exp01.ipynb
outputs/2026-03-07/09-27-39/.hydra/: hydra.yaml
outputs/2026-03-07/09-28-46/.hydra/: config.yaml  hydra.yaml
outputs/2026-03-07/09-30-23/.hydra/: config.yaml  hydra.yaml
preprocessing/: data_preprocessing.py
src/: preprocessing.py  training.py
src/predicting/: predict.py
src/preprocessing/: __init__.py  data_preprocessing.py
src/training/: create_artifacts.py  train.py
test/: test_data_preprocessing.py
training/: train.py
utils/: __init__.py  create_artifacts.py  handle_cfg.py  handle_logging.py
(+4 files in other folders)
