[project]
name = "wine-quality-mlops-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc>=3.66.1",
    "fastapi>=0.135.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.1",
    "pandas>=2.3.3",
]
